crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__typed_check_before_untyped_applicators.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"required\":[\"a\"]},{\"required\":[\"b\"]}],\"properties\":{\"k\":{\"type\":\"string\"}},\"required\":[\"k\"],\"type\":\"object\"}"
expression: is_valid_body(schema)
---
(match instance {
            __Value::Object(obj) => {
                let mut __req_0 = false;
                let __object_pass = obj
                    .iter()
                    .all(|(key, instance)| {
                        match key.as_str() {
                            "k" => {
                                if !(instance.is_string()) {
                                    return false;
                                }
                                __req_0 = true;
                            }
                            _ => {}
                        }
                        true
                    });
                __object_pass && __req_0
            }
            _ => false,
        })
            && ({
                let mut matched = is_branch_valid_0(instance);
                (if is_branch_valid_1(instance) {
                    if matched {
                        false
                    } else {
                        matched = true;
                        true
                    }
                } else {
                    true
                }) && matched
            })
