crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__typed_fallback_mixed_types.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"minLength\":2,\"type\":[\"string\",\"integer\"]}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => (s.chars().count() as u64) >= 2,
            __Value::Number(n) if __types::is_integer(n) => true,
            _ => false,
        }
