crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__typed_string_before_all_of.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"allOf\":[{\"minLength\":1},{\"maxLength\":5}],\"type\":\"string\"}"
expression: is_valid_body(schema)
---
(instance.is_string())
            && ((match instance {
                serde_json::Value::String(s) => !s.is_empty(),
                _ => true,
            })
                && (match instance {
                    serde_json::Value::String(s) => (s.chars().count() as u64) <= 5,
                    _ => true,
                }))
