crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__uneval_guard_nested_one_of.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"https://json-schema.org/draft/2020-12/schema\",\"anyOf\":[{\"oneOf\":[{\"properties\":{\"a\":{}},\"required\":[\"a\"]},{\"properties\":{\"b\":{}},\"required\":[\"b\"]}]}],\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
(({
            let mut matched = match instance {
                serde_json::Value::Object(obj) => obj.contains_key("a"),
                _ => true,
            };
            (if match instance {
                serde_json::Value::Object(obj) => obj.contains_key("b"),
                _ => true,
            } {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }))
            && (match instance {
                serde_json::Value::Object(obj) => {
                    obj.iter()
                        .all(|(__key, __value)| {
                            let key_str = __key.as_str();
                            if (|instance: &serde_json::Value| validate_ref_2(
                                instance,
                            ))(instance)
                                && ({
                                    let mut __one_of_matches = 0usize;
                                    let mut __one_of_evaluates = false;
                                    if (|instance: &serde_json::Value| validate_ref_0(
                                        instance,
                                    ))(instance) {
                                        __one_of_matches += 1;
                                        __one_of_evaluates = __one_of_evaluates
                                            || (matches!(key_str, "a"));
                                    }
                                    if (|instance: &serde_json::Value| validate_ref_1(
                                        instance,
                                    ))(instance) {
                                        __one_of_matches += 1;
                                        __one_of_evaluates = __one_of_evaluates
                                            || (matches!(key_str, "b"));
                                    }
                                    __one_of_matches == 1 && __one_of_evaluates
                                })
                            {
                                true
                            } else {
                                false
                            }
                        })
                }
                _ => false,
            })
