crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__uneval_items_guard_nested_one_of.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"https://json-schema.org/draft/2020-12/schema\",\"anyOf\":[{\"oneOf\":[{\"prefixItems\":[{}]},{\"prefixItems\":[{},{}]}]}],\"type\":\"array\",\"unevaluatedItems\":false}"
expression: is_valid_body(schema)
---
(match instance {
            serde_json::Value::Array(arr) => {
                let __one_of_matches_0 = (true as usize) + (true as usize);
                let __guard_0 = (|instance: &serde_json::Value| validate_ref_0(
                    instance,
                ))(instance);
                arr.iter()
                    .enumerate()
                    .all(|(idx, item)| {
                        if __guard_0
                            && (__one_of_matches_0 == 1
                                && ((true && (idx < 1usize)) || (true && (idx < 2usize))))
                        {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        })
            && (({
                let mut matched = true;
                (if true {
                    if matched {
                        false
                    } else {
                        matched = true;
                        true
                    }
                } else {
                    true
                }) && matched
            }))
