crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__uneval_items_toplevel_ref.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$defs\":{\"base\":{\"prefixItems\":[{}]}},\"$ref\":\"#/$defs/base\",\"type\":\"array\",\"unevaluatedItems\":false}"
expression: is_valid_body(schema)
---
(match instance {
            __Value::Array(arr) => {
                arr.iter()
                    .enumerate()
                    .all(|(idx, item)| {
                        if eval_items_ref_0(instance, arr, idx, item) {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        }) && (validate_ref_0(instance))
