crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__uneval_props_dynamic_anchor_via_ref.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$defs\":{\"anchored\":{\"$dynamicAnchor\":\"node\",\"properties\":{\"a\":{}}}},\"$ref\":\"#/$defs/anchored\",\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
(match instance {
            __Value::Object(obj) => {
                obj.iter()
                    .all(|(__key, __value)| {
                        let key_str = __key.as_str();
                        if eval_ref_0(instance, obj, key_str) { true } else { false }
                    })
            }
            _ => false,
        }) && (validate_ref_0(instance))
