crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__unique_items.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"type\":\"array\",\"uniqueItems\":true}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => __uniq::is_unique(arr),
            _ => false,
        }
