crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__unique_items_false.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"items\":{\"type\":\"integer\"},\"type\":\"array\",\"uniqueItems\":false}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => {
                arr.iter()
                    .all(|instance| match instance {
                        __Value::Number(n) => __types::is_integer(n),
                        _ => false,
                    })
            }
            _ => false,
        }
